fix(play): examples text color not visible

--- a/playground/src/App.scss
+++ b/playground/src/App.scss
@@ -16,7 +16,7 @@
   border-radius: 16px;
   border: 2px solid var(--td-brand-color);
   transform: translateX(-50%);
-  background-color: var(--bg);
+  background-color: var(--td-bg-color-component);
   // dprint-ignore
   box-shadow: 0 calc(0.400 * var(--elevation-depth, 0) * 1px) calc(0.900 * var(--elevation-depth, 0) * 1px) 0 rgba(0, 0, 0, calc(0.13441 - 0.00063 * var(--elevation-depth, 0) + 0.00003 * var(--elevation-depth, 0) * var(--elevation-depth, 0))), 0 calc(0.075 * var(--elevation-depth, 0) * 1px) calc(0.225 * var(--elevation-depth, 0) * 1px) 0 rgba(0, 0, 0, calc(0.10997 - 0.00051 * var(--elevation-depth, 0) + 0.00003 * var(--elevation-depth, 0) * var(--elevation-depth, 0)));
   .example {
