--- a/playground/src/examples/CodeEditor/index.scss
+++ b/playground/src/examples/CodeEditor/index.scss
@@ -1,3 +1,6 @@
+.t-popup__content {
+  color: var(--bg) !important;
+}
 .code-editor {
   --border-size: 1px;
 
